// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridTemplate renders 0 1`] = `
Array [
  .c0 {
  grid-template: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders function 1`] = `
Array [
  .c0 {
  grid-template: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-template: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders negative number 1`] = `
Array [
  .c0 {
  grid-template: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-template: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-template: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-template: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-template: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-template: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-template: July;
  }
}

@media April {
  .c0 {
    grid-template: August;
  }
}

@media January {
  .c0 {
    grid-template: September;
  }
}

@media April {
  .c0 {
    grid-template: November;
  }
}

@media June {
  .c0 {
    grid-template: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-template: July;
  }
}

@media April {
  .c0 {
    grid-template: August;
  }
}

@media January {
  .c0 {
    grid-template: September;
  }
}

@media April {
  .c0 {
    grid-template: November;
  }
}

@media June {
  .c0 {
    grid-template: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template: January;
  }
}

@media April {
  .c0 {
    grid-template: December;
  }
}

@media January {
  .c0 {
    grid-template: April;
  }
}

@media April {
  .c0 {
    grid-template: May;
  }
}

@media June {
  .c0 {
    grid-template: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-template: January;
  }
}

@media April {
  .c0 {
    grid-template: December;
  }
}

@media January {
  .c0 {
    grid-template: April;
  }
}

@media April {
  .c0 {
    grid-template: May;
  }
}

@media June {
  .c0 {
    grid-template: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders postitive number 1`] = `
Array [
  .c0 {
  grid-template: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders string 1`] = `
Array [
  .c0 {
  grid-template: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridTemplate renders valid theme path 1`] = `
Array [
  .c0 {
  grid-template: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-template: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
